--- a/index.html
+++ b/index.html
@@ -1,223 +1,152 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Lula | Commission</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lula (chxb.Lu) - Watermark Design</title>
+    <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --primary-gradient: linear-gradient(135deg, #aaddff, #88ccff);
+            --bg-gradient: linear-gradient(160deg, #eef7ff 0%, #d6eeff 50%, #f0f8ff 100%);
+            --text-color: #446688;
+            --card-bg: rgba(255, 255, 255, 0.85);
+            --card-border: rgba(180, 210, 255, 0.5);
+        }
 
-<link href="https://fonts.googleapis.com/css2?family=Mitr:wght@300;400;500;600&display=swap" rel="stylesheet">
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Mitr', sans-serif;
+            color: var(--text-color);
+        }
 
-<style>
-:root{
- --grad1:#cfe9ff;
- --grad2:#eaf6ff;
- --primary:#5da9e9;
- --soft:#ffffffcc;
- --text:#24425c;
-}
+        body {
+            background: var(--bg-gradient);
+            background-attachment: fixed;
+            min-height: 100vh;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
 
-*{
- margin:0;
- padding:0;
- box-sizing:border-box;
- font-family:'Mitr',sans-serif;
-}
+        @keyframes fadeUp {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
 
-body{
- background:linear-gradient(135deg,var(--grad1),var(--grad2));
- color:var(--text);
- overflow-x:hidden;
-}
+        @keyframes float {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-10px); }
+        }
 
-section{
- padding:70px 20px;
- display:flex;
- justify-content:center;
-}
+        .card {
+            background: var(--card-bg);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+            border: 1.5px solid var(--card-border);
+            border-radius: 22px;
+            padding: 25px;
+            width: 100%;
+            max-width: 650px;
+            margin-bottom: 20px;
+            animation: fadeUp 0.8s ease forwards;
+            box-shadow: 0 8px 32px rgba(0,0,0,0.05);
+        }
 
-.card{
- width:100%;
- max-width:900px;
- background:var(--soft);
- backdrop-filter:blur(10px);
- border-radius:25px;
- padding:40px;
- box-shadow:0 15px 40px rgba(93,169,233,0.2);
- animation:fadeUp 0.8s ease forwards;
-}
+        .header { text-align: center; position: relative; }
+        .header h1 { font-size: 2.2em; color: #335577; margin-bottom: 5px; }
+        .sub-title { font-size: 1.1em; opacity: 0.8; font-weight: 300; }
+        
+        .sparkle {
+            position: absolute;
+            font-size: 24px;
+            animation: float 3s infinite ease-in-out;
+        }
 
-h1{
- font-size:36px;
- text-align:center;
- margin-bottom:10px;
-}
+        .brief-container {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            margin-top: 15px;
+        }
 
-.subtitle{
- text-align:center;
- margin-bottom:25px;
- opacity:0.8;
-}
+        .brief-image {
+            width: 100%;
+            border-radius: 15px;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.08);
+            display: block;
+        }
 
-.glow-btn{
- display:inline-block;
- padding:14px 30px;
- border-radius:40px;
- background:var(--primary);
- color:white;
- text-decoration:none;
- font-weight:500;
- box-shadow:0 0 15px rgba(93,169,233,0.5);
- transition:0.3s;
-}
+        .section-title {
+            font-weight: 600;
+            font-size: 1.3em;
+            margin-bottom: 20px;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+        }
 
-.glow-btn:hover{
- transform:translateY(-3px);
- box-shadow:0 0 25px rgba(93,169,233,0.7);
-}
+        .contact-info {
+            text-align: center;
+            padding: 10px;
+            background: rgba(255,255,255,0.5);
+            border-radius: 15px;
+            margin: 15px 0;
+            font-size: 0.95em;
+        }
 
-.status{
- text-align:center;
- font-size:18px;
- margin-top:10px;
-}
+        .btn-cta {
+            display: block;
+            background: var(--primary-gradient);
+            color: white !important;
+            text-align: center;
+            padding: 15px;
+            border-radius: 50px;
+            text-decoration: none;
+            font-weight: 600;
+            margin-top: 20px;
+            transition: 0.3s;
+            box-shadow: 0 5px 15px rgba(136, 204, 255, 0.4);
+        }
 
-.section-title{
- font-size:22px;
- margin-bottom:20px;
-}
-
-.list{
- line-height:1.9;
-}
-
-img{
- width:100%;
- border-radius:15px;
- margin-top:15px;
-}
-
-.footer{
- text-align:center;
- font-size:14px;
- padding:40px 20px;
- opacity:0.8;
-}
-
-@keyframes fadeUp{
- from{opacity:0; transform:translateY(30px);}
- to{opacity:1; transform:translateY(0);}
-}
-</style>
+        .btn-cta:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 20px rgba(136, 204, 255, 0.6);
+        }
+    </style>
 </head>
-
 <body>
 
-<!-- 1. Header -->
-<section>
-<div class="card" style="text-align:center;">
-<h1>☁️ Lula ☁️</h1>
-<div class="subtitle">🩵 chxb.Lu 🩵</div>
-<a class="glow-btn"> รับออกแบบลายน้ำ</a>
-<div class="status">💧 เปิดรับงานอยู่นะคะ อ่านรายละเอียดเพิ่มเติมได้เลยค่า ✨</div>
-</div>
-</section>
+    <div class="card header">
+        <div class="sparkle" style="top: -10px; left: 10%;">✨</div>
+        <div class="sparkle" style="bottom: 10px; right: 5%; animation-delay: 1s;">☁️</div>
+        <h1>Lula (chxb.Lu)</h1>
+        <div class="sub-title">รับออกแบบลายน้ำ</div>
+    </div>
 
-<!-- 2. About -->
-<section>
-<div class="card">
-<div class="section-title">☁️ เกี่ยวกับร้าน</div>
-<div class="list">
-รับออกแบบลายน้ำสำหรับ YCH และ CMS  
-ดีไซน์โทนละมุน ฟ้า-ขาว คลีน ๆ 🫧✨
-</div>
-</div>
-</section>
+    <div class="card">
+        <div class="section-title">🎨 รายละเอียดการบรีฟงาน</div>
+        <div class="brief-container">
+            <img class="brief-image" src="https://images2.imgbox.com/39/53/7nFmXm2Z_o.png" alt="YCH Brief">
+            <img class="brief-image" src="https://images2.imgbox.com/79/11/gB38S0wS_o.png" alt="CMS Brief">
+        </div>
+    </div>
 
-<!-- 3. รายละเอียดบรีฟ -->
-<section>
-<div class="card">
-<div class="section-title">💧 รายละเอียดการบรีฟงาน ลายน้ำ YCH & CMS</div>
-
-<!-- ใส่ภาพที่ให้มา 2 ภาพ -->
-<img src="IMAGE_1_BASE64_HERE">
-<img src="IMAGE_2_BASE64_HERE">
-
-</div>
-</section>
-
-<!-- 4. ขั้นตอน -->
-<section>
-<div class="card">
-<div class="section-title">🫧 ขั้นตอนการสั่งงาน</div>
-<div class="list">
-🩵 1. ติดต่อผ่าน Facebook / IG / X  
-☁️ 2. แจ้งประเภทงาน YCH (V.1-8) หรือ CMS  
-💧 3. บรีฟรายละเอียด (ชื่อ / ข้อความ / โทนสี / ของตกแต่ง)  
-✨ 4. ชำระเงิน และรอรับงานภายใน 1-2 วัน/งาน 🪽
-</div>
-</div>
-</section>
-
-<!-- 5. เงื่อนไข -->
-<section>
-<div class="card">
-<div class="section-title">✨ เงื่อนไขการรับงาน</div>
-<div class="list">
-💧 ระยะเวลาทำงาน 1-2 วัน/งาน  
-☁️ ของตกแต่งเพิ่มเติม บวกเพิ่มอย่างละ 5฿ / 1 ชิ้น  
-🫧 ใส่ชื่อ/ข้อความได้ทั้งไทย อังกฤษ  
-✨ หากมีเรฟ สามารถแนบเรฟสีมาได้เลยค่ะ
-</div>
-</div>
-</section>
-
-<!-- 6. บริการเพิ่มเติม -->
-<section>
-<div class="card">
-<div class="section-title">🪡 บริการเพิ่มเติม</div>
-<div class="list">
-☁️ ออกแบบสำหรับ CMS  
-แนวโอมาคาเสะ น่ารัก ละมุน ไม่หนักจนเกินไป 🫧
-</div>
-</div>
-</section>
-
-<!-- 7. ติดต่อ -->
-<section>
-<div class="card">
-<div class="section-title">💧 ติดต่อร้านค้า</div>
-<div class="list">
-🩵 Facebook : Lula  
-🫧 IG : chxb.lula  
-🕊️ X : @LalaChxb
-</div>
-</div>
-</section>
-
-<!-- 8. ตัวอย่างงาน -->
-<section>
-<div class="card">
-<div class="section-title">☁️ ตัวอย่างงาน</div>
-ดูผลงานเพิ่มเติมได้ที่ IG : chxb.lula หรือ X : @LalaChxb 🧵
-</div>
-</section>
-
-<!-- 9. CTA -->
-<section>
-<div class="card" style="text-align:center;">
-<div style="margin-bottom:20px;font-size:20px;">
-☁️ สนใจสั่งงาน ติดต่อได้เลยนะคะ 🩵
-</div>
-<a class="glow-btn">✉️ ติดต่อสั่งงาน</a>
-</div>
-</section>
-
-<!-- 10. Footer -->
-<div class="footer">
-☁️ Lula | chxb.Lu  
-<br>
-🫧 Thank you for your support 🐦
-</div>
+    <div class="card">
+        <div class="section-title">📍 ติดต่อสั่งงาน</div>
+        <div class="contact-info">
+            <p><strong>Facebook:</strong> Lula</p>
+            <p><strong>IG:</strong> chxb.lula</p>
+            <p><strong>X (Twitter):</strong> @LalaChxb</p>
+        </div>
+        <p style="text-align: center; font-size: 0.85em; opacity: 0.7;">ระยะเวลาทำงาน 1-2 วัน/งาน</p>
+        <a href="#" class="btn-cta">ส่งบรีฟงานที่นี่</a>
+    </div>
 
 </body>
 </html>
