--- a/index.html
+++ b/index.html
@@ -3,149 +3,307 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lula (chxb.Lu) - Watermark Design</title>
+    <title>Lula (chxb.Lu) - Commission Page</title>
     <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary-gradient: linear-gradient(135deg, #aaddff, #88ccff);
-            --bg-gradient: linear-gradient(160deg, #eef7ff 0%, #d6eeff 50%, #f0f8ff 100%);
-            --text-color: #446688;
-            --card-bg: rgba(255, 255, 255, 0.85);
-            --card-border: rgba(180, 210, 255, 0.5);
+            --primary-pink: #ff5c9d;
+            --primary-purple: #c9a8e8;
+            --text-color: #8a3a5c;
+            --glass-bg: rgba(255, 255, 255, 0.74);
+            --glass-border: rgba(255, 180, 220, 0.45);
+            --main-gradient: linear-gradient(135deg, #ff85b3, #c97ae8);
         }
 
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Mitr', sans-serif;
-            color: var(--text-color);
-        }
+        * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Mitr', sans-serif; }
 
         body {
-            background: var(--bg-gradient);
+            background: linear-gradient(160deg, #ffd6eb 0%, #f5d6ff 50%, #d6eeff 100%);
             background-attachment: fixed;
-            min-height: 100vh;
+            color: var(--text-color);
+            line-height: 1.6;
+            overflow-x: hidden;
             padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
         }
 
+        /* Sparkle Animation */
+        .sparkles {
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            pointer-events: none;
+            z-index: -1;
+        }
+        .sparkle {
+            position: absolute;
+            animation: float 6s infinite ease-in-out;
+            opacity: 0.6;
+        }
+        @keyframes float {
+            0%, 100% { transform: translateY(0) rotate(0deg); }
+            50% { transform: translateY(-20px) rotate(20deg); }
+        }
+
+        /* FadeUp Animation */
+        .fade-up {
+            opacity: 0;
+            transform: translateY(30px);
+            animation: fadeUp 0.8s forwards ease-out;
+        }
         @keyframes fadeUp {
-            from { opacity: 0; transform: translateY(20px); }
             to { opacity: 1; transform: translateY(0); }
         }
 
-        @keyframes float {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-10px); }
-        }
+        .container { max-width: 800px; margin: 0 auto; }
 
-        .card {
-            background: var(--card-bg);
-            backdrop-filter: blur(12px);
-            -webkit-backdrop-filter: blur(12px);
-            border: 1.5px solid var(--card-border);
-            border-radius: 22px;
-            padding: 25px;
-            width: 100%;
-            max-width: 650px;
-            margin-bottom: 20px;
-            animation: fadeUp 0.8s ease forwards;
-            box-shadow: 0 8px 32px rgba(0,0,0,0.05);
-        }
-
-        .header { text-align: center; position: relative; }
-        .header h1 { font-size: 2.2em; color: #335577; margin-bottom: 5px; }
-        .sub-title { font-size: 1.1em; opacity: 0.8; font-weight: 300; }
-        
-        .sparkle {
-            position: absolute;
-            font-size: 24px;
-            animation: float 3s infinite ease-in-out;
-        }
-
-        .brief-container {
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-            margin-top: 15px;
-        }
-
-        .brief-image {
-            width: 100%;
-            border-radius: 15px;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.08);
-            display: block;
-        }
-
-        .section-title {
-            font-weight: 600;
-            font-size: 1.3em;
-            margin-bottom: 20px;
+        /* 1. Header */
+        header {
             text-align: center;
+            padding: 40px 0;
+        }
+        .logo-container {
+            width: 120px;
+            height: 120px;
+            margin: 0 auto 20px;
+            border-radius: 50%;
+            background: #fff;
+            border: 4px solid var(--primary-pink);
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 10px;
-        }
-
-        .contact-info {
-            text-align: center;
+            overflow: hidden;
+            animation: pulse 2s infinite;
             padding: 10px;
-            background: rgba(255,255,255,0.5);
-            border-radius: 15px;
-            margin: 15px 0;
-            font-size: 0.95em;
+        }
+        .logo-container img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+        @keyframes pulse {
+            0% { box-shadow: 0 0 0 0 rgba(255, 92, 157, 0.4); }
+            70% { box-shadow: 0 0 0 15px rgba(255, 92, 157, 0); }
+            100% { box-shadow: 0 0 0 0 rgba(255, 92, 157, 0); }
+        }
+        .badge-row { display: flex; justify-content: center; gap: 10px; margin-top: 10px; }
+        .badge {
+            background: var(--main-gradient);
+            color: white;
+            padding: 4px 15px;
+            border-radius: 20px;
+            font-size: 0.8rem;
+            font-weight: 500;
         }
 
-        .btn-cta {
-            display: block;
-            background: var(--primary-gradient);
-            color: white !important;
-            text-align: center;
+        /* 2. Status */
+        .status-card {
+            background: var(--glass-bg);
+            backdrop-filter: blur(12px);
+            border: 1px solid var(--glass-border);
+            border-radius: 22px;
             padding: 15px;
+            text-align: center;
+            margin-bottom: 25px;
+        }
+        .dot {
+            height: 12px; width: 12px;
+            background-color: #00ff88;
+            border-radius: 50%;
+            display: inline-block;
+            margin-right: 8px;
+            animation: blink 1s infinite;
+        }
+        @keyframes blink { 0% { opacity: 1; } 50% { opacity: 0.3; } 100% { opacity: 1; } }
+
+        /* 3-9. Cards */
+        .card {
+            background: var(--glass-bg);
+            backdrop-filter: blur(12px);
+            border: 1px solid var(--glass-border);
+            border-radius: 22px;
+            padding: 30px;
+            margin-bottom: 25px;
+        }
+        h2 { 
+            margin-bottom: 20px; 
+            font-weight: 600; 
+            color: var(--primary-pink);
+            display: flex;
+            align-items: center;
+        }
+        h2::before { content: '🌸'; margin-right: 10px; font-size: 1.2rem; }
+
+        .price-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 0;
+            border-bottom: 1px dashed var(--glass-border);
+        }
+        .lnk-price {
+            background: var(--main-gradient);
+            color: white;
+            padding: 2px 12px;
+            border-radius: 20px;
+            font-size: 0.9rem;
+        }
+
+        .brief-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 15px;
+        }
+        .brief-box {
+            background: rgba(255,255,255,0.4);
+            padding: 15px;
+            border-radius: 15px;
+            font-size: 0.9rem;
+        }
+        .brief-box h4 { color: var(--primary-pink); margin-bottom: 10px; }
+
+        /* 10. CTA Button */
+        .cta-container { text-align: center; padding: 40px 0; }
+        .btn-main {
+            background: var(--main-gradient);
+            color: white;
+            padding: 15px 45px;
             border-radius: 50px;
             text-decoration: none;
             font-weight: 600;
-            margin-top: 20px;
+            font-size: 1.2rem;
+            display: inline-block;
             transition: 0.3s;
-            box-shadow: 0 5px 15px rgba(136, 204, 255, 0.4);
+            box-shadow: 0 10px 20px rgba(255, 133, 179, 0.3);
+            border: none;
+            cursor: pointer;
+        }
+        .btn-main:hover {
+            transform: scale(1.05);
+            box-shadow: 0 0 25px rgba(201, 122, 232, 0.6);
         }
 
-        .btn-cta:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 8px 20px rgba(136, 204, 255, 0.6);
+        footer { text-align: center; font-size: 0.8rem; opacity: 0.7; padding-bottom: 20px; }
+
+        @media (max-width: 600px) {
+            .brief-grid { grid-template-columns: 1fr; }
         }
     </style>
 </head>
 <body>
 
-    <div class="card header">
-        <div class="sparkle" style="top: -10px; left: 10%;">✨</div>
-        <div class="sparkle" style="bottom: 10px; right: 5%; animation-delay: 1s;">☁️</div>
-        <h1>Lula (chxb.Lu)</h1>
-        <div class="sub-title">รับออกแบบลายน้ำ</div>
+    <div class="sparkles">
+        <span class="sparkle" style="top: 10%; left: 10%;">✦</span>
+        <span class="sparkle" style="top: 20%; right: 15%;">🌸</span>
+        <span class="sparkle" style="top: 50%; left: 5%;">✿</span>
+        <span class="sparkle" style="top: 70%; right: 10%;">🎀</span>
+        <span class="sparkle" style="top: 85%; left: 20%;">⋆</span>
+        <span class="sparkle" style="top: 40%; right: 25%;">🌷</span>
     </div>
 
-    <div class="card">
-        <div class="section-title">🎨 รายละเอียดการบรีฟงาน</div>
-        <div class="brief-container">
-            <img class="brief-image" src="https://images2.imgbox.com/39/53/7nFmXm2Z_o.png" alt="YCH Brief">
-            <img class="brief-image" src="https://images2.imgbox.com/79/11/gB38S0wS_o.png" alt="CMS Brief">
-        </div>
-    </div>
+    <div class="container">
+        <header class="fade-up">
+            <div class="logo-container">
+                <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='45' fill='none' stroke='%23ff5c9d' stroke-width='2'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Mitr' font-size='20' fill='%23ff5c9d'%3ELula%3C/text%3E%3C/svg%3E" alt="Lula Logo">
+            </div>
+            <h1>Lula (chxb.Lu)</h1>
+            <p>รับออกแบบลายน้ำ</p>
+            <div class="badge-row">
+                <span class="badge">Graphic Design</span>
+                <span class="badge">Fast Work</span>
+            </div>
+        </header>
 
-    <div class="card">
-        <div class="section-title">📍 ติดต่อสั่งงาน</div>
-        <div class="contact-info">
-            <p><strong>Facebook:</strong> Lula</p>
-            <p><strong>IG:</strong> chxb.lula</p>
-            <p><strong>X (Twitter):</strong> @LalaChxb</p>
+        <div class="status-card fade-up" style="animation-delay: 0.1s;">
+            <span class="dot"></span> <strong>Status:</strong> Open for Commissions
         </div>
-        <p style="text-align: center; font-size: 0.85em; opacity: 0.7;">ระยะเวลาทำงาน 1-2 วัน/งาน</p>
-        <a href="#" class="btn-cta">ส่งบรีฟงานที่นี่</a>
+
+        <div class="card fade-up" style="animation-delay: 0.2s;">
+            <h2>ราคาลงสี / Watermark</h2>
+            <div class="price-item">
+                <span>ลายน้ำ YCH (V.1-8)</span>
+                <span class="lnk-price">เริ่มต้น ฿xx</span>
+            </div>
+            <div class="price-item">
+                <span>ลายน้ำ CMS (โอมากาเสะ)</span>
+                <span class="lnk-price">เริ่มต้น ฿xx</span>
+            </div>
+            <div class="price-item">
+                <span>เพิ่มของตกแต่งอื่นๆ</span>
+                <span class="lnk-price">+฿5 / 1 ชิ้น</span>
+            </div>
+        </div>
+
+        <div class="card fade-up" style="animation-delay: 0.3s;">
+            <h2>กลุ่มลายเส้น</h2>
+            <div class="brief-grid">
+                <div class="brief-box">
+                    <h4>กลุ่มฟรี</h4>
+                    <p>ลายเส้นสไตล์มาตรฐานสำหรับลูกค้าทั่วไป</p>
+                </div>
+                <div class="brief-box">
+                    <h4>กลุ่มเสียค่าเข้า</h4>
+                    <p>ลายเส้นพิเศษ พรีเมียม หรือคอลเลกชันเฉพาะ</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="card fade-up" style="animation-delay: 0.4s;">
+            <h2>ขั้นตอนการบรีฟงาน</h2>
+            <div class="brief-grid">
+                <div class="brief-box">
+                    <h4>YCH (V.1-8)</h4>
+                    <ul>
+                        <li>แจ้ง Ver. ลายน้ำที่สนใจ</li>
+                        <li>ระบุชื่อ/ข้อความ (ไทย/ENG)</li>
+                        <li>แจ้งการจัดวาง และขนาดตัวอักษร</li>
+                        <li>ระบุโทนสี (แนบเรฟสีได้)</li>
+                        <li>เลือกการลงสี: ไล่สี หรือ แยกสี</li>
+                    </ul>
+                </div>
+                <div class="brief-box">
+                    <h4>CMS (โอมากาเสะ)</h4>
+                    <ul>
+                        <li>ส่งภาพลายน้ำตัวอย่างที่สนใจ</li>
+                        <li>บรีฟของตกแต่งหรือธีมงานได้</li>
+                        <li>ถนัดแนวน่ารักๆ ไม่ยากจนเกินไป</li>
+                        <li>ระบุชื่อ/ข้อความ และโทนสี</li>
+                        <li>ระยะเวลาทำงาน 1-2 วัน/งาน</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="card fade-up" style="animation-delay: 0.5s;">
+            <h2>เงื่อนไขการจ้างงาน</h2>
+            <p style="font-size: 0.9rem;">
+                • ระยะเวลาการทำงาน 1-2 วัน ต่อ 1 งาน<br>
+                • หากต้องการเพิ่มของตกแต่งนอกเหนือจาก Ver. ปกติ +5 บาท/ชิ้น<br>
+                • ห้ามนำงานไปแอบอ้างหรือขโมยผลงาน (Every work has an owner)
+            </p>
+        </div>
+
+        <div class="card fade-up" style="animation-delay: 0.6s;">
+            <h2>แอปพลิเคชัน & เกม</h2>
+            <p>เร็วๆ นี้...</p>
+        </div>
+
+        <div class="card fade-up" style="animation-delay: 0.7s;">
+            <h2>สติกเกอร์ LINE</h2>
+            <p>ติดตามผลงานสติกเกอร์ได้ที่ LINE Store</p>
+        </div>
+
+        <div class="card fade-up" style="animation-delay: 0.8s;">
+            <h2>ตัวอย่างงาน (Portfolio)</h2>
+            <p style="text-align:center; opacity:0.6;">[ พื้นที่แสดงรูปภาพตัวอย่าง ]</p>
+        </div>
+
+        <div class="cta-container fade-up" style="animation-delay: 0.9s;">
+            <a href="#" class="btn-main">สั่งงานผ่าน Facebook / X</a>
+            <p style="margin-top: 20px; font-weight: 500;">Contact: Lula | IG: chxb.lula | X: @LalaChxb</p>
+        </div>
+
+        <footer class="fade-up">
+            This is the work of Lula Shop. Thank you for your support! 🩷
+        </footer>
     </div>
 
 </body>
