--- a/index.html
+++ b/index.html
@@ -3,266 +3,163 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lula (chxb.lu) - Watermark Commission</title>
+    <title>Lula (chxb.Lu) - Commission Page</title>
     <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary-pink: #ff5c9d;
-            --primary-purple: #c9a8e8;
-            --primary-blue: #7bb9fa;
-            --text-color: #8a3a5c;
+            /* DESIGN SYSTEM: Blue-White Tone */
+            --bg-gradient: linear-gradient(160deg, #d6eeff 0%, #ffffff 50%, #f0f7ff 100%);
+            --primary-blue: #5ca9ff;
+            --accent-purple: #c9a8e8;
+            --text-color: #3a5c8a;
             --glass-bg: rgba(255, 255, 255, 0.74);
-            --glass-border: rgba(255, 180, 220, 0.45);
-            --main-gradient: linear-gradient(135deg, #ff85b3, #c97ae8);
-            --blue-gradient: linear-gradient(135deg, #7bb9fa, #a8c9ff);
+            --glass-border: rgba(180, 220, 255, 0.45);
+            --btn-gradient: linear-gradient(135deg, #85c1ff, #c97ae8);
         }
 
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Mitr', sans-serif; }
 
         body {
-            background: linear-gradient(160deg, #ffd6eb 0%, #f5d6ff 50%, #d6eeff 100%);
+            background: var(--bg-gradient);
             background-attachment: fixed;
             color: var(--text-color);
+            min-height: 100vh;
             padding: 20px;
             overflow-x: hidden;
         }
 
-        /* Sparkle Animation */
-        .sparkles {
-            position: fixed;
-            top: 0; left: 0; width: 100%; height: 100%;
-            pointer-events: none;
-            z-index: -1;
-        }
-        .sparkle {
-            position: absolute;
-            animation: float 6s infinite ease-in-out;
-            opacity: 0.6;
-            color: var(--primary-pink);
-        }
+        /* Sparkle float animation */
+        .sparkles { position: fixed; width: 100%; height: 100%; top: 0; left: 0; pointer-events: none; z-index: 0; }
+        .sparkle { position: absolute; animation: float 6s infinite ease-in-out; opacity: 0.7; font-size: 1.2rem; }
         @keyframes float {
             0%, 100% { transform: translateY(0) rotate(0deg); }
-            50% { transform: translateY(-20px) rotate(20deg); }
+            50% { transform: translateY(-20px) rotate(15deg); }
         }
 
-        /* FadeUp Animation */
-        .fade-up {
-            opacity: 0;
-            transform: translateY(30px);
-            animation: fadeUp 0.8s forwards ease-out;
-        }
-        @keyframes fadeUp {
-            to { opacity: 1; transform: translateY(0); }
-        }
+        .container { max-width: 800px; margin: 0 auto; position: relative; z-index: 1; }
 
-        .container { max-width: 800px; margin: 0 auto; }
-
-        /* 1. Header */
-        header { text-align: center; padding: 40px 0; }
-        .logo-container {
-            width: 130px; height: 130px;
-            margin: 0 auto 20px;
-            border-radius: 50%;
-            background: white;
-            border: 4px solid var(--primary-pink);
-            display: flex; align-items: center; justify-content: center;
-            overflow: hidden;
-            animation: pulse 2s infinite;
-        }
-        .logo-container img { width: 90%; height: 90%; object-fit: contain; }
-        @keyframes pulse {
-            0% { box-shadow: 0 0 0 0 rgba(255, 92, 157, 0.4); }
-            70% { box-shadow: 0 0 0 15px rgba(255, 92, 157, 0); }
-            100% { box-shadow: 0 0 0 0 rgba(255, 92, 157, 0); }
-        }
-        .badge-row { display: flex; justify-content: center; gap: 10px; margin-top: 15px; }
-        .badge {
-            background: var(--blue-gradient);
-            color: white;
-            padding: 5px 18px;
-            border-radius: 20px;
-            font-size: 0.85rem;
-            font-weight: 500;
-        }
-
-        /* 2. Status */
-        .status-bar {
-            background: var(--glass-bg);
-            backdrop-filter: blur(12px);
-            border: 1px solid var(--glass-border);
-            border-radius: 22px;
-            padding: 12px;
-            text-align: center;
-            margin-bottom: 30px;
-            font-weight: 500;
-        }
-        .dot {
-            height: 12px; width: 12px;
-            background-color: #4CAF50;
-            border-radius: 50%;
-            display: inline-block;
-            margin-right: 8px;
-            animation: blink 1.2s infinite;
-        }
-        @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0.2; } }
-
-        /* General Card Style */
+        /* Card System */
         .card {
             background: var(--glass-bg);
             backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
             border: 1px solid var(--glass-border);
             border-radius: 22px;
             padding: 30px;
             margin-bottom: 25px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.05);
+            animation: fadeUp 0.8s ease-out forwards;
         }
-        h2 { 
-            font-weight: 600; 
-            margin-bottom: 20px; 
-            display: flex; 
-            align-items: center; 
-            color: var(--text-color);
-        }
-        h2::before { content: '🧵'; margin-right: 12px; }
 
-        /* 3. Price Section */
-        .price-item {
-            display: flex; justify-content: space-between; align-items: center;
-            padding: 12px 0;
-            border-bottom: 1px solid rgba(138, 58, 92, 0.1);
+        @keyframes fadeUp {
+            from { opacity: 0; transform: translateY(30px); }
+            to { opacity: 1; transform: translateY(0); }
         }
-        .lnk-price {
-            background: var(--main-gradient);
-            color: white;
-            padding: 4px 15px;
-            border-radius: 20px;
+
+        /* 1. Header (No Logo per brief) */
+        header { text-align: center; }
+        .shop-name { font-size: 2.5rem; font-weight: 600; color: var(--primary-blue); margin-bottom: 5px; }
+        .shop-desc { font-size: 1.1rem; opacity: 0.8; font-weight: 300; }
+
+        /* 2. Status */
+        .status-badge {
+            display: inline-flex;
+            align-items: center;
+            background: white;
+            padding: 8px 20px;
+            border-radius: 50px;
             font-weight: 500;
+            margin-top: 15px;
+            border: 1px solid var(--glass-border);
             font-size: 0.9rem;
         }
-
-        /* 5. Instruction / Brief Detail */
-        .brief-section { margin-top: 15px; }
-        .brief-title { 
-            background: var(--primary-blue); color: white; 
-            padding: 5px 15px; border-radius: 5px 20px 20px 5px;
-            display: inline-block; margin-bottom: 15px; font-size: 0.95rem;
-            font-weight: 500;
+        .dot {
+            height: 10px;
+            width: 10px;
+            background-color: #2ecc71;
+            border-radius: 50%;
+            display: inline-block;
+            margin-right: 10px;
+            animation: blink 1.5s infinite;
         }
-        .brief-content { font-size: 0.95rem; margin-left: 10px; }
-        .brief-content li { list-style: none; margin-bottom: 8px; position: relative; padding-left: 20px; }
-        .brief-content li::before { content: '✨'; position: absolute; left: 0; color: var(--primary-blue); font-size: 0.8rem; }
+        @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0.3; } }
+
+        /* 5. Images Section */
+        h2 { font-size: 1.4rem; margin-bottom: 20px; color: var(--primary-blue); font-weight: 500; }
+        .img-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; }
+        .img-grid img { 
+            width: 100%; 
+            border-radius: 18px; 
+            border: 1px solid var(--glass-border);
+            transition: 0.3s;
+        }
+        .img-grid img:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0,0,0,0.1); }
 
         /* 10. CTA Button */
-        .cta-section { text-align: center; padding: 40px 0; }
         .cta-btn {
-            background: var(--main-gradient);
+            display: block;
+            width: fit-content;
+            min-width: 250px;
+            margin: 40px auto 20px;
+            padding: 15px 40px;
+            background: var(--btn-gradient);
             color: white;
-            padding: 18px 45px;
-            border-radius: 50px;
+            text-align: center;
             text-decoration: none;
+            border-radius: 50px;
             font-weight: 600;
-            display: inline-block;
-            transition: all 0.3s;
-            border: none;
-            box-shadow: 0 10px 20px rgba(255, 92, 157, 0.2);
-            font-size: 1.2rem;
-            animation: glow 2s infinite ease-in-out;
+            font-size: 1.1rem;
+            box-shadow: 0 4px 15px rgba(133, 193, 255, 0.4);
+            animation: glow 2s infinite;
+            transition: 0.3s;
         }
         @keyframes glow {
-            0%, 100% { box-shadow: 0 10px 20px rgba(255, 92, 157, 0.2); }
-            50% { box-shadow: 0 0 25px rgba(201, 168, 232, 0.6); }
+            0%, 100% { box-shadow: 0 0 5px rgba(133, 193, 255, 0.4); }
+            50% { box-shadow: 0 0 20px rgba(133, 193, 255, 0.7); }
         }
         .cta-btn:hover { transform: scale(1.05); }
 
-        footer { text-align: center; padding-bottom: 40px; font-size: 0.85rem; opacity: 0.8; }
+        footer { text-align: center; font-size: 0.85rem; opacity: 0.6; padding: 20px 0 40px; }
 
         @media (max-width: 600px) {
-            .price-item { flex-direction: column; align-items: flex-start; gap: 8px; }
+            .img-grid { grid-template-columns: 1fr; }
+            .shop-name { font-size: 2rem; }
         }
     </style>
 </head>
 <body>
 
     <div class="sparkles">
-        <span class="sparkle" style="top: 15%; left: 10%;">✦</span>
-        <span class="sparkle" style="top: 25%; right: 12%;">🧵</span>
-        <span class="sparkle" style="top: 45%; left: 8%;">✿</span>
-        <span class="sparkle" style="top: 65%; right: 15%;">🪡</span>
-        <span class="sparkle" style="top: 80%; left: 20%;">⋆</span>
-        <span class="sparkle" style="top: 40%; right: 25%;">🪽</span>
+        <div class="sparkle" style="top: 10%; left: 10%;">✦</div>
+        <div class="sparkle" style="top: 25%; left: 85%;">🐦</div>
+        <div class="sparkle" style="top: 50%; left: 5%;">✿</div>
+        <div class="sparkle" style="top: 75%; left: 80%;">👶🏻</div>
+        <div class="sparkle" style="top: 85%; left: 20%;">⋆</div>
+        <div class="sparkle" style="top: 40%; left: 90%;">🧵</div>
     </div>
 
     <div class="container">
-        <header class="fade-up">
-            <div class="logo-container">
-                <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='45' fill='white' stroke='%23ff5c9d' stroke-width='2'/%3E%3Ctext x='50%25' y='55%25' dominant-baseline='middle' text-anchor='middle' font-family='Mitr' font-size='16' fill='%238a3a5c'%3ELula%3C/text%3E%3C/svg%3E" alt="Lula Logo">
-            </div>
-            <h1>Lula (chxb.lu)</h1>
-            <p style="margin-top: 5px; opacity: 0.9;">รับออกแบบลายน้ำ</p>
-            <div class="badge-row">
-                <span class="badge">Watermark Design</span>
-                <span class="badge">Blue & White Theme</span>
+        <header class="card">
+            <h1 class="shop-name">Lula (chxb.Lu)</h1>
+            <p class="shop-desc">รับออกแบบลายน้ำ</p>
+            <div class="status-badge">
+                <span class="dot"></span> สถานะการรับงาน : Open
             </div>
         </header>
 
-        <div class="status-bar fade-up">
-            <span class="dot"></span> <strong>Status:</strong> เปิดรับงาน (Open)
-        </div>
-
-        <div class="card fade-up">
-            <h2>ราคาลายน้ำ / Watermark</h2>
-            <div class="price-item">
-                <span>ลายน้ำ YCH (V.1-8) / CMS</span>
-                <span class="lnk-price">สอบถามเพิ่มเติม</span>
+        <section class="card">
+            <h2>📋 รายละเอียดการบรีฟงาน</h2>
+            <div class="img-grid">
+                <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAA...[รูป CMS ที่คุณส่งมา]..." alt="CMS Briefing Details">
+                <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAA...[รูป YCH ที่คุณส่งมา]..." alt="YCH Briefing Details">
             </div>
-            <div class="price-item">
-                <span>เพิ่มของตกแต่ง (นอกเหนือจากตัวอย่าง)</span>
-                <span class="lnk-price">+ 5 ฿ / 1 ชิ้น</span>
-            </div>
-        </div>
+        </section>
 
-        <div class="card fade-up">
-            <h2>รายละเอียดการบรีฟงาน</h2>
-            
-            <div class="brief-section">
-                <div class="brief-title">YCH ( V.1-8 )</div>
-                <div class="brief-content">
-                    <li>แจ้ง Ver. ของลายน้ำที่สนใจ (หากวงแบบที่สนใจมาด้วยจะดีมากค่ะ)</li>
-                    <li>แจ้งชื่อ/ข้อความ (ได้ทั้งภาษาไทย และอังกฤษ ฯลฯ)</li>
-                    <li>ระบุการจัดวางคำ/ขนาดตัวอักษร (คำไหนตัวใหญ่/ตัวเล็ก)</li>
-                    <li>แจ้งโทนสีที่ต้องการ (หากมีเรฟสีสามารถแนบมาได้เลยค่ะ)</li>
-                    <li>แจ้งรูปแบบการลงสี: แบบไล่สี หรือ ระบายแยกสีแต่ละสีในทีละจุด</li>
-                </div>
-            </div>
-
-            <div class="brief-section" style="margin-top: 25px;">
-                <div class="brief-title">CMS ( โอมากาเสะ )</div>
-                <div class="brief-content">
-                    <li>ส่งภาพลายน้ำตัวอย่างมาแจ้งว่าสนใจแบบไหน</li>
-                    <li>สามารถบรีฟของตกแต่ง สิ่งต่างๆ ที่อยากให้วาดลงไป หรือแนวธีมงานได้</li>
-                    <li>ระบุชื่อ/ข้อความ และโทนสีที่ต้องการ</li>
-                    <li>*ทางร้านถนัดแนวน่ารักๆ งานไม่ยากจนเกินไป</li>
-                </div>
-            </div>
-        </div>
-
-        <div class="card fade-up">
-            <h2>เงื่อนไขการจ้างงาน</h2>
-            <div class="brief-content">
-                <li>ระยะเวลาในการทำงาน 1-2 วัน / งาน</li>
-                <li>ทุกงานมีเจ้าของ ห้ามแอบอ้างหรือขโมยผลงาน</li>
-                <li>ขอบคุณลูกค้าที่น่ารักทุกคนที่คอยสนับสนุนร้านนะคะ</li>
-            </div>
-        </div>
-
-        <div class="cta-section fade-up">
-            <a href="#" class="cta-btn">ติดต่องาน / สั่งซื้อ</a>
-            <p style="margin-top: 25px; font-weight: 500; font-size: 0.95rem;">
-                Facebook: Lula | IG: chxb.lula | X: @LalaChxb
-            </p>
-        </div>
-
-        <footer class="fade-up">
-            <p>This is the work of Lula Shop. Wishing you happiness forever. 🐦</p>
+        <a href="https://www.facebook.com" class="cta-btn">ติดต่อสั่งงานที่นี่ 🧵</a>
+        
+        <footer>
+            <p>© 2024 Lula Shop • All work has an owner.</p>
+            <p>Wishing you happiness forever ✿</p>
         </footer>
     </div>
 
